Stop zoom on search input on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -9,11 +9,11 @@
   justify-content: space-around;
   margin-bottom: 1.5em;
   height: 1.5em;
-  font-size: 1.5em;
+  font-size: 1.2em;
 }
 
 .episodesControls input {
-  width: 20em;
+  width: 15em;
 }
 
 .episodesControl {
