--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,10 @@ footer {
   justify-content: space-between;
 }
 
+input[type="text"] {
+  font-size: 20px;
+}
+
 @media only screen and (max-device-width: 420px) {
   html {
     font-size: 32px;
